# ECE3574-Text-to-HTML-in-GUI

./: CMakeLists.txt  README.md  convert.cpp  convert.h  fileCommand.cpp  fileCommand.h  gui.cpp  gui.h  main.cpp  qtmarkup.h  test.h  testall.h  text.cpp  text.h  text2html.cpp
